--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,6 +64,11 @@ p {
     background-color: initial;
     color: hsla(0, 0%, 100%, .5);
 }
+.nav > li > a:focus {
+    background-color: #ffffff;
+    color: #FF658D;
+}
+
 
 .navbar {
     margin-bottom: 0;
@@ -77,6 +82,11 @@ p {
     background-color: #f3f3f3;
     background-image: url('../assets/img/fondo.jpg');
     margin-bottom: 30px;
+}
+
+.swiper-container {
+    width: 100%;
+    height: 500px;
 }
 
 .header_academia h1 {
