--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,7 @@
 /* Estilos generales */
+body{
+    color: #4d4d4f;
+}
 
 h1, h2, h3 {
     font-family: 'Raleway', sans-serif;
@@ -22,8 +25,8 @@ h3 {
     font-size: 1.75em;
 }
 
-p {
-    color: hsla(0, 0%, 0%, 0.8);
+p{
+    font-size: 1.5rem;
 }
 
 /* Navbar */
@@ -64,7 +67,7 @@ p {
     height: 700px;
     padding-top: 250px;
     background-color: #f3f3f3;
-    background-image: url('../img/fondo.jpg');
+    background-image: url('/img/fondo.jpg');
     margin-bottom: 30px;
 }
 
@@ -151,7 +154,6 @@ p {
     background-color: #f3f3f3;
     padding: 15px 0 8px 20px;
     font-size: 1.2em;
-    color: #8a8a8a;
     position: absolute;
     margin-top: -10px;
     width: 100%;
@@ -281,13 +283,51 @@ footer{
     margin-top: 40px;
 }
 
-/*galeria imágenes*/
+/*pag galeria imágenes*/
 .example-image {
     height: 21rem;
     border-radius: 4px;
     vertical-align: bottom;
     margin: 10px 5px 5px 5px;
 }
+/*pag noticias*/
+.recorte{
+    height: 350px;
+    overflow: hidden;
+}
+.articulo{
+    border-bottom: 1px solid #cccccc;
+    margin-top: 30px;
+}
+.articulo p{
+    padding-bottom: 5px;
+}
+.vermas{
+    color: #FF658D;
+    cursor: pointer;
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+.mas-contenido p a{
+    color:  #FF658D;
+    border: 1px solid  #FF658D;
+    text-align: center;
+    padding: 10px;
+    margin: 30px 0 60px 0;
+}
+.mas-contenido p a:hover{
+    color: #ffffff;
+    background-color: #FF658D;
+}
+.mas-contenido{
+    margin-top: 30px;
+    margin-bottom: 60px
+}
+/*pag contacto*/
+.titulo-formulario{
+    padding-bottom: 30px;
+}
+
 
 @media (min-width: 992px) and (max-width: 1199px) {
     /*pag galeria de imagenes / img*/
@@ -353,5 +393,53 @@ footer{
         margin: 5px 5px 5px 5px;
         height: auto;
     }
+    /*pag index quienes somos*/
+    .nosotros {
+        height: 16vh;
+        padding-top: 13px;
+
+    }
+    .recorte {
+        height: 180px;
+        overflow: hidden;
+    }
 
 }
+
+
+
+
+.swiper-container {
+      width: 100%;
+      height: 100%;
+      background: #000;
+    }
+    .swiper-slide {
+      font-size: 18px;
+      color:#fff;
+      -webkit-box-sizing: border-box;
+      box-sizing: border-box;
+      padding: 40px 60px;
+    }
+    .parallax-bg {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 130%;
+      height: 100%;
+      -webkit-background-size: cover;
+      background-size: cover;
+      background-position: center;
+    }
+    .swiper-slide .title {
+      font-size: 41px;
+      font-weight: 300;
+    }
+    .swiper-slide .subtitle {
+      font-size: 21px;
+    }
+    .swiper-slide .text {
+      font-size: 14px;
+      max-width: 400px;
+      line-height: 1.3;
+    }
