--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -438,21 +438,21 @@ footer{
 }
 
 
-
+/*slider*/
 
 .swiper-container {
-      width: 100%;
-      height: 100%;
-      background: #000;
+    width: 100%;
+    height: 100%;
+    background: #f1f1f1;
     }
-    .swiper-slide {
+.swiper-slide {
       font-size: 18px;
-      color:#fff;
+      color:#4d4d4f;
       -webkit-box-sizing: border-box;
       box-sizing: border-box;
       padding: 40px 60px;
     }
-    .parallax-bg {
+.parallax-bg {
       position: absolute;
       left: 0;
       top: 0;
@@ -462,14 +462,14 @@ footer{
       background-size: cover;
       background-position: center;
     }
-    .swiper-slide .title {
+.swiper-slide .title {
       font-size: 41px;
       font-weight: 300;
     }
-    .swiper-slide .subtitle {
+.swiper-slide .subtitle {
       font-size: 21px;
     }
-    .swiper-slide .text {
+.swiper-slide .text {
       font-size: 14px;
       max-width: 400px;
       line-height: 1.3;
