--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,9 +42,11 @@ p{
 }
 
 .navbar-brand img {
-    max-width: 80px;
+    max-width: 200px;
 }
-
+.navbar-brand{
+    padding: 10px 15px 0 15px;
+}
 .navbar-nav > li > a{
     color: #fff;
     text-shadow: none;
@@ -61,6 +63,8 @@ p{
 
 .navbar {
     margin-bottom: 0;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 /* Header */
